updated the second section of projects page content

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,11 +1,8 @@
 <div class="about-page-main" id="about-page-main">
-
-   <div class="page-content-intro-hr"> 
-    background 
-  </div>
+  <div class="page-content-intro-hr">background</div>
 
   <div class="about-content">
-    <div class="about-container ">
+    <div class="about-container">
       <div class="set-heading">about me</div>
       <div class="set-container">
         <p>
@@ -15,7 +12,7 @@
         </p>
       </div>
     </div>
-    <div class="about-container ">
+    <div class="about-container">
       <div class="set-heading">Background</div>
       <div class="set-container">
         <p>
@@ -25,7 +22,7 @@
         </p>
       </div>
     </div>
-    <div class="about-container ">
+    <div class="about-container">
       <div class="set-heading">skills & expertise</div>
       <div class="set-container">
         <p>
@@ -45,7 +42,7 @@
         </p>
       </div>
     </div>
-    <div class="about-container ">
+    <div class="about-container">
       <div class="set-heading">portfolio</div>
       <div class="set-container">
         <p>
@@ -53,6 +50,11 @@
           demonstration of my technical proficiency, problem-solving abilities,
           and dedication to creating exceptional user experiences.
         </p>
+        <div class="btn-container">
+          <div name="explore" class="explore">
+            explore projects
+          </div>
+        </div>
       </div>
     </div>
   </div>
