--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -45,23 +45,22 @@
     </div>
   </div>
 
-  <div class="page-content-intro-hr">featured items</div>
+  <div class="page-content-intro-hr">featured</div>
 
   <div class="homepage-content-section feeds-container">
     <div class="recent-project-container feed">
 
       <div class="details-heading">
-        <div class="heading">
-          featured project
-        </div>
+        <div class="heading">project</div>
       </div>
 
       <div class="recent-project-details">
         <div class="recent-project-img">
           <img
             class="project-img"
-            src="./img/projects/prj-mabunda.png"
+            src="./img/projects/prj-mbg.png"
             alt="recent project"
+            title="View Site"
           />
         </div>
 
@@ -89,10 +88,10 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <div class="news-feed-container feed">
+
       <div class="feed-title">news headlines</div>
 
       <div class="weather-container">
