--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,15 +1,15 @@
 <div class="projects-page-main" id="projects-page-main">
-  <div class="page-content-intro-hr">project details</div>
+  <div class="page-content-intro-hr">featured</div>
 
   <section class="project-details">
     <div class="top-container">
-
       <div class="details-container top-left-details">
         <div class="project-img-container">
           <img
             class="project-img"
-            src="./img/projects/prj-mabunda.png"
+            src="./img/projects/prj-mbg.png"
             alt="recent project"
+            title="View Site"
           />
         </div>
         <div class="project-description">
@@ -17,7 +17,7 @@
           <div class="details">
             <p>
               A business website developed using latest web technologies such as
-              HTML5, SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
+              HTML5, SCSS, Bootstrap 5.
             </p>
           </div>
           <div class="project-views">
@@ -32,6 +32,7 @@
           </div>
         </div>
       </div>
+
       <div class="details-container top-right-details">
         <div class="project-description">
           <div class="heading">description</div>
@@ -47,16 +48,10 @@
                 A business website developed using web technologies HTML5, SCSS,
                 Angular
               </li>
-              <li>
-                <i class="bi bi-stop"></i>
-                A business website developed using web technologies HTML5, SCSS,
-                Angular
-              </li>
             </ul>
           </div>
         </div>
       </div>
-
     </div>
 
     <div class="bottom-container">
@@ -102,102 +97,92 @@
       </div>
     </div>
   </section>
-  <!-- 
-  <div class="page-content-intro-hr"> featured projects </div> -->
 
-  <!-- <section class="featured-projects">
-    <div class="cards-section">
-      <div class="project-card">
-        <div class="project-image-container">
-          <img
-            class="project-img"
-            src="./img/projects/prj-mabunda.png"
-            alt="recent project"
-          />
-        </div>
+  <div class="page-content-intro-hr">more projects</div>
 
-        <div class="project-name">mabunda group</div>
-        <div class="project-status">
-          <span class="current-status git-status"
-            ><i class="bi bi-check-circle-fill"></i> GitHub</span
-          >
-          <span class="current-status complete-status"
-            ><i class="bi bi-check-circle-fill"></i> Completed</span
-          >
-          <span class="current-status online-status"
-            ><i class="bi bi-check-circle-fill"></i> Online</span
-          >
-        </div>
+  <section class="featured-projects">
+    <div class="project-container">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-vloc.png"
+          alt="featured project"
+        />
       </div>
 
-      <div class="project-card">
-        <div class="project-image-container">
-          <img
-            class="project-img"
-            src="./img/projects/prj-vloc.png"
-            alt="recent project"
-          />
-        </div>
+      <div class="project-details-container">
+        <div class="project-name">v-loc system</div>
 
-        <div class="project-name">vehicle locator system</div>
-        <div class="project-status">
-          <span class="current-status git-status"
-            ><i class="bi bi-check-circle-fill"></i> GitHub</span
-          >
-          <span class="current-status complete-status"
-            ><i class="bi bi-check-circle-fill"></i> Completed</span
-          >
-          <span class="current-status online-status"
-            ><i class="bi bi-check-circle-fill"></i> Online</span
-          >
-        </div>
-      </div>
+        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
 
-      <div class="project-card">
-        <div class="project-image-container">
-          <img
-            class="project-img"
-            src="./img/projects/prj-mabunda.png"
-            alt="recent project"
-          />
-        </div>
-
-        <div class="project-name">km. monakali attorneys</div>
-        <div class="project-status">
-          <span class="current-status git-status"
-            ><i class="bi bi-check-circle-fill"></i> GitHub</span
-          >
-          <span class="current-status complete-status"
-            ><i class="bi bi-check-circle-fill"></i> Completed</span
-          >
-          <span class="current-status online-status"
-            ><i class="bi bi-check-circle-fill"></i> Online</span
-          >
-        </div>
-      </div>
-
-      <div class="project-card">
-        <div class="project-image-container">
-          <img
-            class="project-img"
-            src="./img/projects/prj-masterpage.png"
-            alt="recent project"
-          />
-        </div>
-
-        <div class="project-name">masterpage grid-layout</div>
-        <div class="project-status">
-          <span class="current-status git-status"
-            ><i class="bi bi-check-circle-fill"></i> GitHub</span
-          >
-          <span class="current-status complete-status"
-            ><i class="bi bi-check-circle-fill"></i> Completed</span
-          >
-          <span class="current-status online-status"
-            ><i class="bi bi-check-circle-fill"></i> Online</span
-          >
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn more">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
         </div>
       </div>
     </div>
-  </section> -->
+
+    <div class="project-container">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-mk.png"
+          alt="featured project"
+        />
+      </div>
+
+      <div class="project-details-container">
+        <div class="project-name">monakali attorneys</div>
+
+        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn more">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-container">
+      <div class="project-image-container">
+        <img
+          class="project-img"
+          src="./img/projects/prj-mbg.png"
+          alt="featured project"
+        />
+      </div>
+
+      <div class="project-details-container">
+        <div class="project-name">Geo-loc weather</div>
+
+        <div class="project-summary"><i class="bi bi-arrow-return-right"></i> Website built with Angular</div>
+
+        <div class="project-view-btns">
+          <div class="view-btn git-hub-repo">
+            <i class="bi bi-github"></i> GitHub
+          </div>
+          <div class="view-btn more">
+            <i class="bi bi-bookmark"></i> Details
+          </div>
+          <div class="view-btn live-site">
+            <i class="bi bi-box-arrow-up-right"></i> Online
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
