--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -1,3 +1,6 @@
 <div class="contact-page-main" id="contact-page-main">
     <div class="page-content-intro-hr"> drop a comment </div>
+    <div class="contact-form-container">
+        
+    </div>
 </div>
