--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,10 +1,9 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
+  <div class="page-content-intro-hr">tech stack</div>
 
-  <div class="page-content-intro-hr">technology stack</div>
-  
   <div class="sets-container">
-    <div class="set-container ui-design">
-      <div class="heading">angular core skills</div>
+    <div class="set-container">
+      <div class="heading">Key skills</div>
       <div class="set">
         <span class="skill"><i class="bi bi-caret-right-fill"></i>HTML5</span>
         <span class="skill"><i class="bi bi-caret-right-fill"></i>SCSS</span>
@@ -12,55 +11,61 @@
           ><i class="bi bi-caret-right-fill"></i>Bootstrap 5</span
         >
         <span class="skill"
-          ><i class="bi bi-caret-right-fill"></i>TypeScript</span
-        >
-        <span class="skill"
           ><i class="bi bi-caret-right-fill"></i>JavaScript</span
         >
+        <span class="skill"
+          ><i class="bi bi-caret-right-fill"></i>TypeScript</span
+        >
+
         <span class="skill"
           ><i class="bi bi-caret-right-fill"></i>Angular 16+</span
         >
       </div>
     </div>
-    <div class="set-container framework">
-      <div class="heading">frameworks & libs</div>
-      <div class="set">
-        <span class="skill"
-          ><i class="bi bi-box-fill"></i> Angular Framework</span
-        >
-        <span class="skill"><i class="bi bi-box-fill"></i> RxJs </span>
-        <span class="skill"><i class="bi bi-box-fill"></i> NgRx </span>
-        <span class="skill"><i class="bi bi-box-fill"></i> Font Awesome</span>
-        <span class="skill"><i class="bi bi-box-fill"></i> JavaScript</span>
-        <span class="skill"><i class="bi bi-box-fill"></i> Angular 16+</span>
-      </div>
-    </div>
-    <div class="set-container concepts">
+    <div class="set-container">
       <div class="heading">concepts</div>
       <div class="set">
         <span class="skill"
           ><i class="bi bi-lightbulb"></i> Responsive UIs</span
         >
-        <span class="skill"><i class="bi bi-lightbulb"></i> RESTful API</span>
-        <span class="skill"><i class="bi bi-lightbulb"></i> Unit Testing</span>
-        <span class="skill"><i class="bi bi-lightbulb"></i> Performance</span>
-        <span class="skill"><i class="bi bi-lightbulb"></i> SEO</span>
         <span class="skill"
-          ><i class="bi bi-lightbulb"></i> Version Control</span
+          ><i class="bi bi-lightbulb"></i> SEO (Open Graphs)
+        </span>
+        <span class="skill"><i class="bi bi-lightbulb"></i> RESTful API</span>
+        <span class="skill"
+          ><i class="bi bi-lightbulb"></i> Performance (SSR)</span
         >
+        <span class="skill"><i class="bi bi-lightbulb"></i> Unit Testing</span>
+
+        <span class="skill"><i class="bi bi-lightbulb"></i> Git & GitHub</span>
       </div>
     </div>
-    <div class="set-container dev-tools">
-      <div class="heading">dev tools</div>
+    <div class="set-container">
+      <div class="heading">frameworks & libs</div>
+      <div class="set">
+        <span class="skill"><i class="bi bi-box-fill"></i> Angular 16+</span>
+        <span class="skill"><i class="bi bi-box-fill"></i> RxJs </span>
+        <span class="skill"><i class="bi bi-box-fill"></i> NgRx </span>
+        <span class="skill"><i class="bi bi-box-fill"></i> Ng2-charts</span>
+        <span class="skill"><i class="bi bi-box-fill"></i> Ngx Libraries </span>
+        <span class="skill"><i class="bi bi-box-fill"></i> Sweetalert2</span>
+      </div>
+    </div>
+
+    <div class="set-container">
+      <div class="heading">ide & tools</div>
       <div class="set">
         <span class="skill"><i class="bi bi-stop-fill"></i> VS Code</span>
         <span class="skill"><i class="bi bi-stop-fill"></i> Angular CLI</span>
-        <span class="skill"><i class="bi bi-stop-fill"></i> Dev-Tool</span>
+        <span class="skill"><i class="bi bi-stop-fill"></i> DevTool</span>
         <span class="skill"><i class="bi bi-stop-fill"></i> Postman</span>
         <span class="skill"
           ><i class="bi bi-stop-fill"></i> Karma & Jasmine</span
         >
         <span class="skill"><i class="bi bi-stop-fill"></i> Git bash</span>
+      </div>
+      <div class="btn-container">
+        <div name="explore" class="explore">explore projects</div>
       </div>
     </div>
   </div>
