--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -8,7 +8,7 @@
       projects
     </button>
     <button name="contact" class="button contact" type="button">
-      get in-touch
+      contact
     </button>
   </div>
 </div>
