--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -114,6 +114,7 @@
 
                     .site-theme {
                         display: block;
+                        font-size: $font-size-lg;
                         // border: 1px solid #e5e5e5;
                     }
                 }
