--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -4,11 +4,11 @@
 
     display: flex;
     flex-direction: column;
-    row-gap: $spacing-md;
+    row-gap: $spacing-sm;
     padding: $spacing-lg;
     border-radius: $spacing-xs;
     background-color: $light-primary-bg-color;
-
+       margin-bottom: $spacing-sm;
     .page-title {
         text-transform: uppercase;
         font-size: $font-size-xl;
@@ -19,7 +19,6 @@
         text-transform: uppercase;
         font-size: $font-size-lg;
         color: $comp-default-font-color;
-        // font-weight: 100;
     }
 
     .page-intro-buttons {
@@ -76,6 +75,7 @@
 
 @include respond-to("xs") {
     #page-instroduction {
+          padding: $spacing-md;
         .page-title {
             font-size: $font-size-lg + 2px;
         }
@@ -88,7 +88,7 @@
             margin: 5px 0;
 
             .button {
-                min-width: 110px;
+                min-width: 100px;
                 padding: 6px 12px;
                 font-size: $font-size-xs;
             }
